--- a/settings/settings.json
+++ b/settings/settings.json
@@ -6,7 +6,7 @@
   "ALIVE_MSG": "*Hello , I am alive now!!*",
   "AUTO_READ_STATUS": "true",
   "MODE": "public",
-  "AUTO_VOICE": "false",
+  "AUTO_VOICE": "true",
   "AUTO_REPLY": "false",
   "AUTO_STICKER": "true",
   "ANTI_BAD": "false",
